[project]
name = "background-removal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "pycocotools>=2.0.10",
    "segment-anything",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.179",
]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
